--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
 .App {
   text-align: center;
+ 
+}
+*{
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+a {
+  text-decoration: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+li {
+  list-style: none;
+}
+.App{
+  margin: 0px auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+main{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  text-align: center;
+  margin: 0 auto;
 }
 
-.App-link {
-  color: #61dafb;
+@media screen and (min-width: 1000px) {
+
+  .content{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 100px 1fr 1fr 100px;
+  }
+
+  header{
+    grid-column: 1/5;
+    grid-row: 1/2;
+ 
+  }
+
+  main{
+    grid-column: 1/5;
+    grid-row: 2/4;
+    
+    
+  }
+
+  footer{
+    grid-column: 1/5;
+    grid-row: 4/5;
+    /*background-color: rgb(206, 206, 206);*/
+  }
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+
+
