--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App {
-  text-align: center;
+
  
 }
 *{
   margin: 0;
   box-sizing: border-box;
+}
+
+p{
+  color: black;
 }
 
 a {
@@ -16,21 +20,33 @@ li {
 }
 .App{
   margin: 0px auto;
+  text-align: center;
 }
 
 main{
   display: flex;
   flex-direction: column;
   text-align: center;
-  margin: 0 auto;
+  margin:0 auto;
+/* flex: 1;*/
+  /*min-height: 80vh;
+ 
+  justify-content: space-between;*/
 }
-
+.content{
+ 
+min-height: 100vh;
+}
+footer{
+  
+}
 @media screen and (min-width: 1000px) {
 
   .content{
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-template-rows: 100px 1fr 1fr 100px;
+ 
   }
 
   header{
@@ -42,6 +58,7 @@ main{
   main{
     grid-column: 1/5;
     grid-row: 2/4;
+   
     
     
   }
@@ -49,7 +66,7 @@ main{
   footer{
     grid-column: 1/5;
     grid-row: 4/5;
-    /*background-color: rgb(206, 206, 206);*/
+   
   }
 
 }
