--- a/src/components/Pages/styleFooter.css
+++ b/src/components/Pages/styleFooter.css
@@ -1,13 +1,18 @@
 .footer-cont{
-    display: flex;
+   /*/ display: flex;*/
     justify-content: space-around;
     background-color: rgb(206, 206, 206);
-    height: 200px;
+  /*  height: 200px;*/
+    margin-top: 10px;
     align-items: center;
     text-align: left;
-    
+    width: 100%;
+    position: absolute;
 }
 
+.footer-cont p{
+    color: black;
+}
 .footer-title{
     font-size: 18px;
     font-weight: bold;
@@ -26,5 +31,42 @@
 footer p{
     font-family:Arial, Helvetica, sans-serif;
     font-size: 16px;
-    padding: 5px;
+    padding: 15px;
+
+}
+
+@media screen and (min-width: 700px) {
+
+    .footer-cont{
+        display: flex;
+        justify-content: space-around;
+        background-color: rgb(206, 206, 206);
+        height: 200px;
+        align-items: center;
+        text-align: left;
+        width: 100%;
+    }
+    
+    .footer-title{
+        font-size: 18px;
+        font-weight: bold;
+        
+    }
+    
+    .footer-logo{
+        text-align: left;
+    }
+    
+    #brand{
+        font-size: 24px;
+        font-weight: bold;
+    }
+    
+    footer p{
+        font-family:Arial, Helvetica, sans-serif;
+        font-size: 16px;
+        padding: 5px;
+    }
+
+
 }
