--- a/src/components/item/styleProductItem.css
+++ b/src/components/item/styleProductItem.css
@@ -14,6 +14,7 @@
 .product-card-cont{
     display: inline-block;
     width: 260px;
+    margin-top: 100px;
 }
 
 .product-card-cont-p{
@@ -39,11 +40,8 @@
     font-weight: bold;
 }
 
-.product-home{
-    width: 100%;
-   
-   
-}
+
+
 
 @media screen and (max-width: 299px) {
     .product-card{
@@ -56,3 +54,74 @@
        
     }
 }
+
+/*-----para detail-----*/
+
+.detail-cont{
+    margin: 0 auto;
+    /*display: flex;*/
+    width: 260px;
+    margin-top: 100px;
+    
+  /*  border:5px solid black;*/
+}
+
+.detail-img img{
+    height: 300px;
+    width: 250px;
+}
+
+.detail-text{
+    text-align: left;
+    margin: 0 auto;
+    margin-left: 20px;
+   
+}
+
+.detail-text p{
+    padding: 10px;
+}
+
+#detail-title{
+    font-weight: bold;
+}
+
+#detail-price{
+    color:red;
+    font-weight: bold;
+    font-size: 20px;
+}
+
+.rating{
+    margin-left: 8px;
+    
+}
+
+.star{
+    color: blue;
+}
+
+.detail-button{
+    margin-left: 10px;
+    margin-top: 20px
+}
+
+button{
+    /*width: 100px;*/
+    
+}
+
+@media screen and (min-width: 1000px) {
+    .detail-cont{
+        display: flex;
+        width: 55vw;
+        margin-top: 100px;
+
+    }
+    
+    .detail-img img{
+        height: 400px;
+        width: 25vw;
+    }
+
+    }
