--- a/src/components/slider/styleSlider.css
+++ b/src/components/slider/styleSlider.css
@@ -26,9 +26,7 @@ p{
 }
 
 .slider-text {
-    float: left;
-    margin-left: 100px;
-    margin-top: 100px;
+    display: none;
     
     
 }
@@ -39,4 +37,56 @@ p{
 
 .p-text{
     font-size: 38px;
+}
+
+#slider2{
+    width: 100%;
+}
+
+@media screen and (min-width: 1000px) {
+    p{
+        color: black;
+    }
+    
+    .slider{
+        width: 800px;
+    }
+    
+    .slider-cont{
+        height: 650px;
+        
+       
+        
+    }
+    
+    .slider-cont-div{
+        height: 650px;
+    }
+    
+    #slider-cont-div1{
+        background-image: url("https://theeverydayman.co.uk/wp-content/uploads/2017/05/Edit1.jpg");
+        height: 650px;
+        background-repeat: no-repeat;
+        background-position: center;
+        background-size: cover;
+    }
+    
+    .slider-text {
+        display: grid;
+        float: left;
+        margin-left: 100px;
+        margin-top: 100px;
+        
+        
+    }
+    
+    .slider-text h3{
+        font-size: 56px;
+    }
+    
+    .p-text{
+        font-size: 38px;
+    }
+
+
 }
