--- a/src/components/Pages/styleAbout.css
+++ b/src/components/Pages/styleAbout.css
@@ -13,6 +13,7 @@
     width: 70%;
     margin: 0 auto;
     padding: 30px;
+    color: black;
    
 }
 
@@ -20,6 +21,7 @@
     font-size: 36px;
     font-weight: bold;
     margin-top: 120px;
+    color: black;
   
 }
 
