--- a/src/components/Pages/styleProducts.css
+++ b/src/components/Pages/styleProducts.css
@@ -2,11 +2,14 @@
     font-size: 36px;
     font-weight: bold;
     margin-top: 120px;
+    color: black;
 }
 
 .product-main-cont{
    /* min-height: 650px;*/
 }
+
+
 
 @media screen and (min-width: 1000px) {
 
