--- a/src/components/Pages/styleUsers.css
+++ b/src/components/Pages/styleUsers.css
@@ -1,7 +1,9 @@
 .users input{
     display: block;
+    width: 200px;
+    margin: 0 auto;
+    height: 30px;
     margin-bottom: 30px;
-    width: 20vw;
 
 }
 
@@ -11,7 +13,7 @@
     margin-top: 70px;
     background-color: rgb(235, 232, 232);
     padding: 30px;
-    width: 25vw;
+    width: 250px;
     border-radius: 30px;
 }
 
@@ -35,4 +37,74 @@
 .msg-cont p{
     margin-top: 20px;
     font-weight: bold;
+}
+
+#continue-as-guest{
+    margin-top: 20px;
+}
+
+#user-title{
+    font-size: 36px;
+    font-weight: bold;
+  
+    color: black;
+    margin-top: 120px;
+}
+
+@media screen and (min-width: 1000px) {
+    .users input{
+        display: block;
+        width: 20vw;
+        height: 30px;
+        margin: 0 auto;
+        margin-bottom: 30px; 
+        
+    
+    }
+    
+    .users{
+      
+        margin: 0 auto;
+        margin-top: 70px;
+        background-color: rgb(235, 232, 232);
+        padding: 30px;
+        width: 25vw;
+        border-radius: 30px;
+    }
+    
+    .form-user p{
+        font-size: 36px;
+        font-weight: bold;
+        margin-top: 50px;
+        color: black;
+        margin-top: 120px;
+    }
+    
+    .login-cont{
+        width: 100%;
+    }
+    .login-cont p{
+        color: black;
+    
+    
+    }
+    
+    .msg-cont p{
+        margin-top: 20px;
+        font-weight: bold;
+    }
+    
+    #continue-as-guest{
+        margin-top: 20px;
+    }
+    
+    #user-title{
+        font-size: 36px;
+        font-weight: bold;
+        margin-top: 50px;
+        
+      
+    }
+
+
 }
